--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,79 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-1.27MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-2.06MB/s(Youtube:不良林), server: 142.202.48.7, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-2.31MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.44MB/s(Youtube:不良林), server: 38.75.137.9, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇳 中国-1.80MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇨🇳 中国-349.3KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.38MB/s(Youtube:不良林), server: sg-02.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-02.licom.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.44MB/s(Youtube:不良林), server: 38.75.137.9, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇭🇰 香港-1.04MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
+  - {name: 🇨🇳 中国-2.45MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇸🇬 新加坡-2.26MB/s(Youtube:不良林), server: sg-04.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-04.licom.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.21MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 8fefb1b5-bee7-4736-8e00-cad32ab113d1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇰🇷 韩国-1.25MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-349.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.38MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.25MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-349.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.38MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.25MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-349.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.38MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.25MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-1.04MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-349.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.38MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.25MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-349.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.38MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.25MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-349.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.38MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.25MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-349.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.38MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.25MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
