--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-3.86MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.80MB/s(Youtube:不良林), server: gz-cm1-kl.hinetwork.tw, port: 11112, type: trojan, password: d46abf38-3a4c-3dfc-91e0-d8d3f1616c73, sni: gz-cm1-kl.hinetwork.tw, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-178.3KB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇯🇵 日本-274.0KB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
   - {name: 🇬🇧 英国-1.57MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-2.06MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇳 中国-8.24MB/s(Youtube:不良林), server: hn.zfnode.org, port: 30217, type: trojan, password: 63ec756d-1f6a-36c8-a9fd-025f4acfc74f, sni: hn.zfnode.org, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.75MB/s(Youtube:不良林), server: 45.78.6.3, port: 29577, type: ss, cipher: aes-256-gcm, password: x2XdRxsjCpjTfWB9}
-  - {name: 🇺🇸 美国-3.11MB/s(Youtube:不良林), server: v47.v2dns.bar, port: 2052, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v47-unlimitndxd, ws-headers: {Host: v47.v2dns.bar}}
-  - {name: 🇨🇳 中国-465.5KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇺🇸 美国-5.14MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.65MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.86MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.24MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 8fefb1b5-bee7-4736-8e00-cad32ab113d1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇨🇳 中国-3.68MB/s(Youtube:不良林), server: gz-cm-kl.hinetwork.tw, port: 11136, type: trojan, password: d46abf38-3a4c-3dfc-91e0-d8d3f1616c73, sni: gz-cm-kl.hinetwork.tw, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-339.8KB/s(Youtube:不良林), server: 41.216.177.41, port: 443, type: trojan, password: 274c1b23-2bfe-40ac-943c-ebc1aa044b22, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.80MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-178.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-274.0KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.57MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-465.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.68MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-339.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.80MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-3.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-178.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-274.0KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.57MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-465.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.68MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-339.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.80MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-178.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-274.0KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.57MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-465.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.68MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-339.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.80MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-3.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-178.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-274.0KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.57MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-465.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.68MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-339.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.80MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-178.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-274.0KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.57MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-465.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.68MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-339.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.80MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-178.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-274.0KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.57MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-465.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.68MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-339.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.80MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-178.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-274.0KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.57MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-465.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.86MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.68MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-339.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.63MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.80MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
