--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-3.59MB/s(Youtube:不良林), server: sg-04.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-04.licom.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.14MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.61MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-4.08MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
-  - {name: 🇨🇳 中国-3.68MB/s(Youtube:不良林), server: gz-cm-kl.hinetwork.tw, port: 11136, type: trojan, password: d46abf38-3a4c-3dfc-91e0-d8d3f1616c73, sni: gz-cm-kl.hinetwork.tw, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-7.93MB/s(Youtube:不良林), server: 158.101.74.69, port: 31939, type: vmess, uuid: f130c826-40d9-44fb-be3d-75ebcb750d12, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-538.9KB/s(Youtube:不良林), server: 45.78.6.3, port: 29577, type: ss, cipher: aes-256-gcm, password: x2XdRxsjCpjTfWB9}
+  - {name: 🇺🇸 美国-313.3KB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇳🇱 荷兰-1.82MB/s(Youtube:不良林), server: 213.183.59.206, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
-  - {name: 🇺🇸 美国-2.66MB/s(Youtube:不良林), server: 104.166.135.10, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 104.166.135.10}}
-  - {name: 🇨🇳 中国-5.86MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇨🇳 中国-508.0KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇯🇵 日本-5.28MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.40MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-895.4KB/s(Youtube:不良林), server: 150.230.99.46, port: 22222, type: vmess, uuid: e6c55d36-022c-4ebc-b9c2-e1220a7184f4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.59MB/s(Youtube:不良林), server: 38.114.114.67, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇸🇬 新加坡-3.67MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-538.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-508.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
+      - 🇯🇵 日本-895.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-538.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-508.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
+      - 🇯🇵 日本-895.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-538.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-508.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
+      - 🇯🇵 日本-895.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-4.08MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-538.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-508.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
+      - 🇯🇵 日本-895.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-538.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-508.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
+      - 🇯🇵 日本-895.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-538.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-508.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
+      - 🇯🇵 日本-895.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-538.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-508.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
+      - 🇯🇵 日本-895.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
