--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-7.93MB/s(Youtube:不良林), server: 158.101.74.69, port: 31939, type: vmess, uuid: f130c826-40d9-44fb-be3d-75ebcb750d12, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-538.9KB/s(Youtube:不良林), server: 45.78.6.3, port: 29577, type: ss, cipher: aes-256-gcm, password: x2XdRxsjCpjTfWB9}
-  - {name: 🇺🇸 美国-313.3KB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-1.82MB/s(Youtube:不良林), server: 213.183.59.206, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
-  - {name: 🇺🇸 美国-3.40MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-895.4KB/s(Youtube:不良林), server: 150.230.99.46, port: 22222, type: vmess, uuid: e6c55d36-022c-4ebc-b9c2-e1220a7184f4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.59MB/s(Youtube:不良林), server: 38.114.114.67, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇸🇬 新加坡-3.67MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-339.8KB/s(Youtube:不良林), server: 41.216.177.41, port: 443, type: trojan, password: 274c1b23-2bfe-40ac-943c-ebc1aa044b22, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.10MB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-854.1KB/s(Youtube:不良林), server: jgwcc2.gaox.ml, port: 443, type: trojan, password: 9c822f05-cfdc-479a-9534-60f3d4127435, sni: jgwcc2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.67MB/s(Youtube:不良林), server: sg-04.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-04.licom.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-3.07MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.24MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-5.24MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-4.62MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-10.27MB/s(Youtube:不良林), server: test01.alderlake.gay, port: 25382, type: ssr, cipher: rc4-md5, password: Xb2FW8, protocol: origin, obfs: http_simple, protocol-param: "", obfs-param: ""}
+  - {name: 🇩🇪 德国-3.03MB/s(Youtube:不良林), server: 146.0.42.87, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 146.0.42.87}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-7.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-538.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
-      - 🇯🇵 日本-895.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-339.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-854.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.07MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.27MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.03MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-7.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-538.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
-      - 🇯🇵 日本-895.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-339.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-854.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.07MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.27MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.03MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-7.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-538.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
-      - 🇯🇵 日本-895.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-339.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-854.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.07MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.27MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.03MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-7.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-538.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
-      - 🇯🇵 日本-895.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-339.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-854.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.07MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.27MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.03MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-7.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-538.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
-      - 🇯🇵 日本-895.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-339.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-854.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.07MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.27MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.03MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-7.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-538.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
-      - 🇯🇵 日本-895.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-339.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-854.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.07MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.27MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.03MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-7.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-538.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
-      - 🇯🇵 日本-895.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-339.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-854.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.07MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.27MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.03MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
